obtain the agent jar and fork the mainClass in a new java process